--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
         </div>
     </section>
 
+    <section class="why-matters-expanded">
+    <div class="container">
+        <h2>Why AI Visibility Matters Right Now</h2>
+        <p>
+            AI tools like ChatGPT, Gemini, Perplexity, and Claude now answer customer questions directly.
+            People ask, “Who’s the best?”, “Who can help with…?”, and “What company does…?”
+            — and AI responds instantly.
+        </p>
+        <p>
+            If AI doesn’t clearly understand your business, your services, and your expertise,
+            it simply recommends another business built into its knowledge base.
+        </p>
+        <p>
+            <strong>Discovery ensures your business is part of those answers — not left out of them.</strong>
+        </p>
+    </div>
+</section>
+
     <!-- WHAT DISCOVERY DOES -->
     <section class="what-it-does">
         <div class="container">
@@ -67,6 +85,50 @@
         </div>
     </section>
 
+    <section class="how-it-works">
+    <div class="container">
+        <h2>How Discovery Works</h2>
+
+        <ul>
+            <li><strong>1. You add your core business details.</strong><br>
+                We guide you through what AI needs to understand your business clearly.</li>
+
+            <li><strong>2. Your information becomes structured and AI-ready.</strong><br>
+                Clean, consistent, organized data — formatted the way answer engines prefer.</li>
+
+            <li><strong>3. AI can now recognize, categorize, and reuse your information.</strong><br>
+                This becomes the foundation for Radar, Amplify, Duo, and deeper AI visibility.</li>
+        </ul>
+    </div>
+</section>
+
+    <section class="benefits">
+    <div class="container">
+        <h2>The Benefits of Discovery</h2>
+
+        <ul>
+            <li><strong>Clarity for AI systems</strong> — you give answer engines the information they need to understand you.</li>
+            <li><strong>Accuracy in recommendations</strong> — AI can explain your services correctly.</li>
+            <li><strong>Visibility foundation</strong> — everything builds on this: Radar, Amplify, Duo.</li>
+            <li><strong>Future-proof positioning</strong> — your business is ready for how AI recommends companies today.</li>
+            <li><strong>Confidence & control</strong> — you aren’t left guessing what AI sees about your business.</li>
+        </ul>
+    </div>
+</section>
+
+    <section class="social-proof">
+    <div class="container">
+        <h2>What Professionals Are Beginning to Realize</h2>
+        <p>
+            AI visibility is becoming the new standard — and early adopters are gaining an advantage.
+        </p>
+
+        <div class="video-placeholder">
+            <p>Testimonials and success stories will appear here.</p>
+        </div>
+    </div>
+</section>
+
     <!-- SCREENSHOT -->
     <section class="screenshot">
         <div class="container">
@@ -88,6 +150,30 @@
             </ul>
         </div>
     </section>
+
+    <section class="faq">
+    <div class="container">
+        <h2>Common Questions</h2>
+
+        <ul>
+            <li><strong>Is this SEO?</strong><br>
+                No. SEO is for search engines. Discovery prepares your business for answer engines (AI systems that give direct responses).</li>
+
+            <li><strong>Do I need technical skills?</strong><br>
+                Not at all. We guide you step-by-step. Discovery is simple and structured.</li>
+
+            <li><strong>Does this replace my website?</strong><br>
+                No. It enhances your presence by helping AI interpret your information correctly.</li>
+
+            <li><strong>How long does it take?</strong><br>
+                Most businesses complete Discovery in under an hour.</li>
+
+            <li><strong>Do I need to update it?</strong><br>
+                You can — but Duo will automate future updates when you're ready for that level.</li>
+        </ul>
+    </div>
+</section>
+
 
     <!-- CTA SECTION -->
     <section class="cta-bottom" id="start">
