--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visibyte-AI — Discovery</title>
+    <title>AIO Visibility Hub — Discovery</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -12,12 +12,12 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <div class="container">
-            <h1>AI Has Replaced Search With Answers.<br>
-            We Make Sure Answer Engines Understand Your Business Clearly.</h1>
+            <h1>AI Has Replaced Traditional Search With Answers.</h1><br>
+            <h2></h2>We Make Sure Answer Engines Like ChatGPT & Perplexity Understand Your Business.</h2>
 
             <p class="subtext">
-                Customers don’t browse through pages of results anymore — they ask AI, and AI gives an answer.<br>
-                Discovery helps ensure AI understands who you are, what you offer, and why you're the right choice.
+                Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.<br>
+                AIO Visibility Hub starts with the "Discovery" level to help ensure AI understands who you are, what you offer, and why you're the right choice to recommend you to your prospects when they are asking questions.
             </p>
 
             <a class="cta-btn" href="#start">Get Started</a>
@@ -33,27 +33,27 @@
         <div class="container">
             <h2>The Way Customers Find Businesses Has Changed</h2>
             <p>
-                AI tools like ChatGPT, Gemini, Perplexity, Claude, and others now answer real questions directly — not through links.
-                Your business deserves to be part of those answers. Discovery gives you the foundation to make that happen without
-                tech overwhelm, jargon, or guesswork.
+                Ever since AI overviews started answering questions on Google, and AI tools like ChatGPT, Gemini, Perplexity, Claude, and others started answering questions directly — not through links, approximately 40% of people are asking questions on these AI answer engines instead of the traditional Google searches. This number is growing daily. In fact, ChatGPT is growing faster than Facebook!
+                Your business deserves to be part of those answers and included in those conversations. Our Discovery level gets you discovered in AI search by giving you the foundation to make that happen without
+                tech overwhelm, jargon, or guesswork.  It is simple, yet powerful, and the beginning of AI visibility, or discovery, so AI bots can recommend you to your prospects.
             </p>
         </div>
     </section>
 
     <section class="why-matters-expanded">
     <div class="container">
-        <h2>Why AI Visibility Matters Right Now</h2>
+        <h2>Why Getting Discovered in AI Search Matters Right Now</h2>
         <p>
-            AI tools like ChatGPT, Gemini, Perplexity, and Claude now answer customer questions directly.
-            People ask, “Who’s the best?”, “Who can help with…?”, and “What company does…?”
-            — and AI responds instantly.
+            AI tools like ChatGPT, Gemini, Perplexity, and Claude are answering your customers questions directly and making recommendations in your area.
+            When people ask, “Who’s the best?”, “Who can help me with…?”, and “What company does…?”
+            — AI responds instantly.
         </p>
         <p>
             If AI doesn’t clearly understand your business, your services, and your expertise,
             it simply recommends another business built into its knowledge base.
         </p>
         <p>
-            <strong>Discovery ensures your business is part of those answers — not left out of them.</strong>
+            <strong>Our Discovery software ensures your business is included in those conversations as part of those answers — not left out of them.</strong>
         </p>
     </div>
 </section>
@@ -61,7 +61,7 @@
     <!-- WHAT DISCOVERY DOES -->
     <section class="what-it-does">
         <div class="container">
-            <h2>What Discovery Does</h2>
+            <h2>What the AIO Visibility Hub "Discovery" Level Software Actually Does</h2>
             <p>
                 Discovery organizes your business information in the way AI understands best. You don’t need technical terms or special
                 knowledge — AI can only recommend businesses it understands. Discovery helps AI understand you clearly and consistently.
@@ -72,8 +72,8 @@
     <!-- WHY THIS MATTERS -->
     <section class="why-matters">
         <div class="container">
-            <h2>Why This Matters</h2>
-            <p>Your customers are already asking AI questions like:</p>
+            <h2>Why AI Discovery Matters</h2>
+            <p>Your customers are already asking AI questions by speaking their questions or typing them into answer engines, like:</p>
 
             <ul>
                 <li>“Who can help me with ___?”</li>
@@ -81,23 +81,23 @@
                 <li>“Who is the best for ___?”</li>
             </ul>
 
-            <p>If AI doesn’t understand your business, it will simply recommend someone else. Discovery ensures your business isn’t left out.</p>
+            <p>If AI doesn’t know or understand your business, it will simply recommend someone else. What most people don't realize is AI does not suddenly read all of the websies in the area of potential businesses. In fact, it doesn't even understand HTML. It can only include businesses in its conversations or recommend you if you are already in its knowledge base. Discovery ensures your business isn’t left out.</p>
         </div>
     </section>
 
     <section class="how-it-works">
     <div class="container">
-        <h2>How Discovery Works</h2>
+        <h2>How AIO Visibility Hub's Discovery Level Works</h2>
 
         <ul>
-            <li><strong>1. You add your core business details.</strong><br>
-                We guide you through what AI needs to understand your business clearly.</li>
+            <li><strong>1. You simply add your core business details.</strong><br>
+                We guide you through each aspect of what AI needs to understand your business fully and clearly.</li>
 
-            <li><strong>2. Your information becomes structured and AI-ready.</strong><br>
-                Clean, consistent, organized data — formatted the way answer engines prefer.</li>
+            <li><strong>2. Discovery structures your information into schema datasets and machine readable formatting so it is AI-ready.</strong><br>
+                Clean, consistent, organized and structured data — formatted the way answer engines prefer so they can learn everything there is to know about your expertise.</li>
 
-            <li><strong>3. AI can now recognize, categorize, and reuse your information.</strong><br>
-                This becomes the foundation for Radar, Amplify, Duo, and deeper AI visibility.</li>
+            <li><strong>3. Once AI discovers you (hence, the "discovery" phase), AI can now recognize, categorize, and reuse your information in its answers and conversations.</strong><br>
+                See, when people ask AI questions, and AI answers, those questions are generally followed up with more questions and answers.  This becomes the foundation for our AI Discovery mode, which leads to Radar targeted, and Amplified levels, and deeper AI visibility across all the major AI answer engines.</li>
         </ul>
     </div>
 </section>
@@ -107,11 +107,12 @@
         <h2>The Benefits of Discovery</h2>
 
         <ul>
-            <li><strong>Clarity for AI systems</strong> — you give answer engines the information they need to understand you.</li>
-            <li><strong>Accuracy in recommendations</strong> — AI can explain your services correctly.</li>
-            <li><strong>Visibility foundation</strong> — everything builds on this: Radar, Amplify, Duo.</li>
-            <li><strong>Future-proof positioning</strong> — your business is ready for how AI recommends companies today.</li>
-            <li><strong>Confidence & control</strong> — you aren’t left guessing what AI sees about your business.</li>
+            <li><strong>Clarity for AI systems</strong> — you give answer engines the information they need to understand what you do.</li>
+            <li><strong>Accuracy in recommendations</strong> — AI can explain your services clearly and answer your future clients' questions.</li>
+            <li><strong>Visibility foundation</strong> — everything builds on this: Radar targeted, Amplified versions, and ultimately the Duo.</li>
+            <li><strong>Future-proof positioning</strong> — your business is future-focused and ready for how AI recommends companies today.</li>
+            <li><strong>Becoming Unique</strong> — providing more of your unique datapoints will set you apart with your own unique visibility.</li>
+            <li><strong>Confidence & control</strong> — you aren’t left guessing what AI sees from the limited data it crawls about your business.</li>
         </ul>
     </div>
 </section>
@@ -120,7 +121,7 @@
     <div class="container">
         <h2>What Professionals Are Beginning to Realize</h2>
         <p>
-            AI visibility is becoming the new standard — and early adopters are gaining an advantage.
+            AI optimization for visibility across AI platforms is becoming the new standard — and early adopters are gaining an advantage.  AI visibility only enhances your SEO efforts and maximizes your exposure across AI search and voice search, i.e. "speakable" search results, as with Siri, Google Assistant, Amazon Alexa, and, on Windows and some devices, Microsoft’s Cortana. Once you are discovered by AI search, your information is included in these speakable voice search assistants, as well, which is a huge bonus compared to SEO alone.
         </p>
 
         <div class="video-placeholder">
@@ -140,13 +141,14 @@
     <!-- WHAT'S INCLUDED -->
     <section class="included">
         <div class="container">
-            <h2>What You Build Inside Discovery</h2>
+            <h2>What You Build Inside Our AI Discovery Software</h2>
 
             <ul>
                 <li><strong>AI-ready business profile</strong> — clear fundamentals AI uses to categorize your business.</li>
                 <li><strong>Structured service descriptions</strong> — so answer engines explain what you offer accurately.</li>
                 <li><strong>Consistency blueprint</strong> — what must match everywhere for AI to trust your data.</li>
-                <li><strong>Foundation for all future AI tools</strong> — custom GPTs, AI assistants, automations.</li>
+                  <li><strong>Inclusion in Voice Search</strong> — like Siri, Amazon Alexa and Microsoft Cortana. </li>
+                <li><strong>Foundation for all future AI tools</strong> — custom GPTs, AI assistants, and automations.</li>
             </ul>
         </div>
     </section>
@@ -178,7 +180,7 @@
     <!-- CTA SECTION -->
     <section class="cta-bottom" id="start">
         <div class="container">
-            <h2>Start With Clarity. Start With Discovery.</h2>
+            <h2>Start With The Foundation of AI Discoverability.</h2>
             <p>Only $97 — one time.</p>
             <a class="cta-btn" href="#purchase">Begin My AI Visibility</a>
         </div>
