--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <div class="container">
-            <h1>AI Has Replaced Traditional Search With Answers.</h1><br>
-            <h2></h2>We Make Sure Answer Engines Like ChatGPT & Perplexity Understand Your Business.</h2>
+            <h1>AI Has Replaced Traditional Search With Answer Engines.</h1><br>
+            We Make Sure Answer Engines Like ChatGPT & Perplexity Understand Your Business.</h1>
 
             <p class="subtext">
                 Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.<br>
