--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <div class="container">
-            <h1>Traditional Search is Being Replaced With Answer Engines.</h1><br>
+            <h1>AI Replaced Traditional Search With Answer Engines<br>
             We Make Sure Answer Engines Like ChatGPT & Perplexity Understand Your Business.</h1>
 
             <p class="subtext">
