--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <div class="container">
-            <h1>AI is Replacing Traditional Search and We Make Sure<br> Answer Engines Like ChatGPT & Perplexity Understand Your Business.</h1>
+            <h1>AI is Replacing Traditional Search <br> We Make Sure Answer Engines Understand Your Business.</h1>
 
             <p class="subtext">
                 Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.
-                AIO Visibility Hub ensures AI understands who you are, what you offer, and why you're the right choice to recommend you to your prospects when they are asking questions.
+                AIO Visibility Hub ensures AI bots understand what you offer, and why you're the right choice to recommend you to your prospects.
             </p>
 
             <a class="cta-btn" href="#start">Get Started</a>
