--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <div class="container">
-            <h1>AI is The New Way to Search <br> & Answer Engines Must Know Your Business.</h1>
+            <h1>AI Search is The New Way to the Discovery Process <br> & Answer Engines Must Know Your Business to Recommend You to Your Prospects.</h1>
 
             <p class="subtext">
                 Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.
