--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.
                 AIO Visibility Hub ensures AI bots understand what you offer, and why you're the right choice to recommend you to your prospects.
             </p>
-
+  <script src="https://fast.wistia.com/player.js" async></script>
+    <script src="https://fast.wistia.com/embed/exug17oae6.js" async type="module"></script>
             <a class="cta-btn" href="#start">Get Started</a>
 
             <div class="video-placeholder">
