--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <div class="container">
-            <h1>AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Know Your Business.</h1>
+            <h1>AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1>
 
             <p class="subtext">
                 Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.
