--- a/index.html
+++ b/index.html
@@ -9,24 +9,35 @@
 
 <body>
 
-    <!-- HERO SECTION -->
-    <section class="hero">
-        <div class="container">
-            <h1>AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1>
+<!-- HERO SECTION -->
+<section class="hero">
+    <div class="container">
+        <h1>AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1>
 
-            <p class="subtext">
-                Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.
-                AIO Visibility Hub ensures AI bots understand what you offer, and why you're the right choice to recommend you to your prospects.
-            </p>
-  <script src="https://fast.wistia.com/player.js" async></script>
-    <script src="https://fast.wistia.com/embed/exug17oae6.js" async type="module"></script>
-            <a class="cta-btn" href="#start">Get Started</a>
+        <p class="subtext">
+            Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.
+            AIO Visibility Hub ensures AI bots understand what you offer, and why you're the right choice to recommend you to your prospects.
+        </p>
 
-            <div class="video-placeholder">
-                <p>Your video walkthrough will appear here.</p>
+        <a class="cta-btn" href="#start">Get Started</a>
+
+        <!-- Wistia Video Embed -->
+        <div class="video-container" style="margin-top: 1.5rem;">
+            <script src="https://fast.wistia.com/embed/medias/exug17oae6.jsonp" async></script>
+            <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+            <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:relative;width:100%;">
+                <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+                    <div class="wistia_responsive_padding" style="padding:0;position:absolute;top:0;left:0;width:100%;height:100%;">
+                        <div class="wistia_embed wistia_async_exug17oae6 videoFoam=true" style="height:100%;width:100%">&nbsp;</div>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+        <!-- END Wistia Embed -->
+
+    </div>
+</section>
+
 
     <!-- SHIFT SECTION -->
     <section class="shift">
