--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
             AIO Visibility Hub ensures AI bots understand what you offer, and why you're the right choice to recommend you to your prospects.
         </p>
 
-        <a class="cta-btn" href="#start">Get Started</a>
-
         <!-- Wistia Video Embed -->
         <div class="video-container" style="margin-top: 1.5rem;">
             <script src="https://fast.wistia.com/embed/medias/exug17oae6.jsonp" async></script>
@@ -34,6 +32,8 @@
             </div>
         </div>
         <!-- END Wistia Embed -->
+
+                <a class="cta-btn" href="#start">Get Discovered</a>
 
     </div>
 </section>
