--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <!-- END Wistia Embed -->
 
-                <a class="cta-btn" href="#start">Get Discovered</a>
+                <a class="cta-btn" href="#start">Build Your Discovery Profile</a>
 
     </div>
 </section>
