--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
             <h2>The Way Customers Find Businesses Has Changed</h2>
             <p>
-                Ever since AI overviews started answering questions on Google, and AI tools like ChatGPT, Gemini, Perplexity, Claude, and others started answering questions directly — not through links, approximately 40% of people are asking questions on these AI answer engines instead of the traditional Google searches. This number is growing daily. In fact, ChatGPT is growing faster than Facebook!
+                Ever since AI overviews started answering questions on Google, and AI tools like ChatGPT, Gemini, Perplexity, Claude, and others started answering questions directly — <i><b>approximately 40% of people are asking questions on these AI answer engines instead of the traditional Google searches.</b></i>i> <u>This number is increasing by the day.</u> In fact, ChatGPT is growing faster than Facebook!
                 Your business deserves to be part of those answers and included in those conversations. Our Discovery level gets you discovered in AI search by giving you the foundation to make that happen without
                 tech overwhelm, jargon, or guesswork.  It is simple, yet powerful, and the beginning of AI visibility, or discovery, so AI bots can recommend you to your prospects.
             </p>
