--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="container">
         <h1>AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1>
 
-        <p class="subtext">
-            Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.
-            AIO Visibility Hub ensures AI bots understand what you offer, and why you're the right choice to recommend you to your prospects.
+        <p>
+            <h2>Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.
+            AIO Visibility Hub ensures AI bots understand what you offer, and why you're the right choice to recommend you to your prospects.</h2>
         </p>
 
         <!-- Wistia Video Embed -->
