--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <font color="gold"><h1>AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1></font>
 
         <p>
-            <h2>Customers don’t browse through pages of results anymore — they ask AI questions, and AI does the research for them.
-            AIO Visibility Hub ensures AI bots understand what you offer, and why you're the right choice to recommend you to your prospects.</h2>
+            <h2>Customers don’t browse through pages of results anymore — they ask AI questions. When AI does the research for them, the AIO Visibility Hub "Discovery" software ensures AI bots discover your business and understand what you offer. That way, when people are asking questions, they know you're the right choice to recommend you to your prospects.</h2>
         </p>
 
         <!-- Wistia Video Embed -->
