--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="gold-gradient">AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1></font>
 
         <p>
-            <h2>Customers don’t browse through pages of results anymore — they ask AI questions. When AI does the research for them, the AIO Visibility Hub "Discovery" software ensures AI bots discover your business and understand what you offer. That way, when people are asking questions, they know you're the right choice to recommend you to your prospects.</h2>
+            <h2>Customers don’t the same way anymore — they ask AI to do the research for them. Our "Discovery" software ensures AI bots discover your business and understand what you offer, so when clients are asking for recommendations, they know you're the right choice.</h2>
         </p>
 
         <!-- Wistia Video Embed -->
