--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <!-- HERO SECTION -->
 <section class="hero">
     <div class="container">
-        <h1 class="gold-gradient">AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1></font>
+        <h1 class="gold-headline">AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1></font>
 
         <p>
-            <h2>Customers don’t the same way anymore — they ask AI to do the research for them. Our "Discovery" software ensures AI bots discover your business and understand what you offer, so when clients are asking for recommendations, they know you're the right choice.</h2>
+            <h2>Your customers don’t search the same way anymore — they ask AI to do the research for them. Our "Discovery" software ensures AI bots understand what you offer, so when clients are asking for recommendations, they know you're the right choice.</h2>
         </p>
 
         <!-- Wistia Video Embed -->
