--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="gold-headline">AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1></font>
 
         <p>
-            <h2>Your customers don’t search the same way anymore — they ask AI to do the research for them. Our "Discovery" software ensures AI bots understand what you offer, so when clients are asking for recommendations, they know you're the right choice.</h2>
+            <h2>Your customers don’t search the same way anymore — they ask AI to do the research for them. By optimizing for AI discovery, you future-proof your marketing and gain a competitive edge in a world where traditional search clicks are declining, and AI referrals deliver higher engagement. Our "Discovery" software ensures AI bots understand what you offer, so when clients are asking for recommendations, they know you're the right choice.</h2>
         </p>
 
         <!-- Wistia Video Embed -->
