--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="gold-headline">AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1></font>
 
         <p>
-            <h2>By optimizing for AI discovery, you future-proof your marketing. AI referrals deliver higher engagement because their questions have already been answered. Our "Discovery" software puts you in front of AI so AI bots like ChatGPT and Perplexity understand your business and can include you in conversations with your prospects.</h2>
+            <h2>By optimizing for AI discovery, you future-proof your marketing. Our "Discovery" makes sure AI bots like ChatGPT and Perplexity understand your business so they can include you in conversations with your prospects.</h2>
         </p>
 
         <!-- Wistia Video Embed -->
