--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <!-- HERO SECTION -->
 <section class="hero">
     <div class="container">
-        <h1 class="gold-headline">AI Search is The New Way to Get Discovered <br> & Answer Engines Need to Cite Your Business.</h1></font>
+        <h1 class="gold-headline">AI Search is The New Way to Get Discovered <br> When Answer Engines Recommend Your Business</h1></font>
 
         <p>
-            <h2>By optimizing for AI discovery, you future-proof your marketing. Our "Discovery" makes sure AI bots like ChatGPT and Perplexity understand your business so they can include you in conversations with your prospects.</h2>
+            <h2>By optimizing for AI discovery, you future-proof your marketing. Our software puts you in front of AI so it understands your business and includes you in conversations with your prospects.</h2>
         </p>
 
         <!-- Wistia Video Embed -->
