--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="gold-headline">AI Search is The New Way to Get Discovered <br> When Answer Engines Recommend Your Business</h1></font>
 
         <p>
-            <h2>By Optimizing for AI Discovery, You Future-Proof Your Marketing. <br>Our Software Puts You in Front of AI ...So It Understands Your Business, and Can Recommend You in Conversations with Your Prospects.</h2>
+            <h2>By Optimizing for AI Discovery, You Future-Proof Your Marketing. <br>Our Software Puts You in Front of AI ...So It Understands Your Business <br>and Can Recommend You in Conversations with Your Prospects.</h2>
         </p>
 
         <!-- Wistia Video Embed -->
