--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AIO Visibility Hub — Discovery</title>
+    <title>AIO Visibility Hub — Discovery Software Gets You in Front of AI</title>
     <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
 <!-- HERO SECTION -->
 <section class="hero">
     <div class="container">
         <h1 class="gold-headline">AI Search is The New Way to Get Discovered <br> When Answer Engines Recommend Your Business</h1></font>
-
         <p>
             <h2>By Optimizing for AI Discovery, You Future-Proof Your Marketing. <br>Our Software Puts You in Front of AI ...So It Understands Your Business <br>and Can Recommend You in Conversations with Your Prospects.</h2>
         </p>
